// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should fire click event on button element 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-button-size-medium el-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-1 el-button-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-button-size-medium el-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-1 el-button-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot for <ElAnchorButton> as a link button 1`] = `
<DocumentFragment>
  <a
    class="el-button-size-medium el-button-icon-only el-anchor-button"
    href="https://example.com"
    rel="noOpener noReferrer"
    role="button"
    target="_blank"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-6 el-icon"
    />
  </a>
</DocumentFragment>
`;

exports[`Button > should match snapshot for icon-only button 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-button-size-medium el-button-icon-only el-button"
    data-variant="primary"
    role="button"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-6 el-icon"
    />
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot with variant and icons 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-button-size-medium el-button"
    data-variant="primary"
    role="button"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-6 el-icon"
    />
    <span
      class="mocked-styled-1 el-button-label"
    >
      Button
    </span>
    <span
      class="mocked-styled-6 el-icon"
    />
  </button>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align center 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-button-group-align-center el-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align left 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-button-group-align-left el-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align right 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-button-group-align-right el-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-button-size-medium el-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-button-spinner"
        />
        <span
          class="mocked-styled-1 el-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FloatingButton > should render FloatingButton with icon 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-floating-button el-button-size-medium el-button-icon-only el-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-button-spinner"
    />
    <span
      class="mocked-styled-6 el-icon"
    />
  </button>
</DocumentFragment>
`;
